--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,8 +1,19 @@
- version: 2.1
- jobs:
-    build:
-      docker:
-       - image: circleci/node:4.8.2 # ジョブのコマンドが実行されるプライマリ コンテナ
-      steps:
-       - checkout # プロジェクト ディレクトリ内のコードをチェック アウトします
-       - run: echo "hello world" # `echo` コマンドを実行します
+version: 2.1
+jobs:
+  print_hello:
+    docker:
+      - image: circleci/node:13.8.0
+    steps:
+      - run: echo hello
+  print_world:
+    docker:
+      - image: circleci/node:13.8.0
+    steps:
+      - run: echo world
+workflows:
+  welcome:
+    jobs:
+      - print_hello
+      - print_world:
+          requires:
+            - print_hello
